# routes/api.php
@@ -31,6 +31,7 @@ Route::group(
         Route::get('articles/{slug}', 'App\Http\Controllers\PublicController@showArticleBySlug');
         Route::get('articles/category/{slug}', 'App\Http\Controllers\PublicController@showArticlesByCategory');
         Route::get('articles/tags/{slug}', 'App\Http\Controllers\PublicController@showArticlesByTag');
+        Route::get('global-search/articles', 'App\Http\Controllers\PublicController@articleGlobalSearch');
     }
 );
 
