# storage/api-docs/api-docs.json
@@ -739,6 +739,62 @@
                 }
             }
         },
+        "/public/global-search/articles": {
+            "get": {
+                "tags": [
+                    "Public"
+                ],
+                "summary": "Get all articles by keyword",
+                "description": "Returns list of article data",
+                "operationId": "articleGlobalSearch",
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "quick search",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "news"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Items per page",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "15"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/tags": {
             "get": {
                 "tags": [
